complete CMakeLists.txt rename some files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,28 @@
-cmake_minimum_required(VERSION 3.27)
-project(compiler_test C)
+cmake_minimum_required(VERSION 3.0)
+project(YASC C)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_executable(compiler_test syntax_tree.c lex.yy.c syntax.tab.c)
+find_package(BISON REQUIRED)
+find_package(FLEX REQUIRED)
+
+bison_target(
+        parser
+        parser.y
+        ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.c
+        COMPILE_FLAGS "-d"
+)
+flex_target(
+        scanner
+        scanner.l
+        ${CMAKE_CURRENT_BINARY_DIR}/scanner.yy.c
+)
+add_flex_bison_dependency(scanner parser)
+
+add_executable(
+        YASC
+        ${BISON_parser_OUTPUTS}
+        ${FLEX_scanner_OUTPUTS}
+        main.c
+)
