now we can run tm.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,6 @@ add_executable(
         YASC
         ${BISON_parser_OUTPUTS}
         ${FLEX_scanner_OUTPUTS}
+        src/tm.c
         src/main.c
 )
