complete symbol table (generate part)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,5 @@ add_executable(
         ${FLEX_scanner_OUTPUTS}
         src/tm.c
         src/main.c
-        src/analyzer.c
+        src/symbol.c
 )
