lowercase YASC -> yasc delete .idea/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(YASC C)
+project(yasc C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -28,7 +28,7 @@ add_flex_bison_dependency(scanner parser)
 include_directories(include)
 
 add_executable(
-        YASC
+        yasc
         ${BISON_parser_OUTPUTS}
         ${FLEX_scanner_OUTPUTS}
         src/main.c
